Fixing the footer's alignement and changing some property into mixin

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -15,9 +15,7 @@
 }
 
 .footer_navigation {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    @include flex-column;
     & ul + ul {
         margin-block-start: 42px;
     }
@@ -47,6 +45,10 @@
 .social__container {
     @include flex-row;
     flex-wrap: wrap;
+    // background-image: image('cursor.png');
+    // background-repeat: no-repeat;
+    // background-size: 10px;
+    // background-position: 50% 50%;
 }
 
 .footer_privicy li:nth-child(2) {
@@ -81,12 +83,7 @@
 }
 
 .copyright {
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 16px;
-    mix-blend-mode: normal;
+    @extend %small-font-size;
     opacity: 0.5;
     padding-block-end: 13px;
     padding-block-start: 19px;
@@ -105,17 +102,11 @@
       .footer_div {
         border-block-end: 0.873968px solid rgba(255, 255, 255, 0.5);
         padding-block-end: 41px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        @include flex-row;
       }
     
       .footer_navigation {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
+        @include flex-row;
         padding: 0;
         padding-block-end: 0;
         border-block-end: 0;
@@ -127,40 +118,36 @@
     }
 
     .list_container {
-    display: flex;
-    flex-direction: row;
-    align-self: center;
+        @include flex-row;
     height: 0;
         & li {
             margin-inline-end: 23px;
         }
     }
 
-    .social__container {
-        margin-block-start: 0;
-        align-self: center;
+    .social__container li {
+        margin-block-start: 2rem;
     }
     .copyright_container {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        @include flex-row;
         margin-block-start: 22px;
     }
     .copyright {
         padding: 0;
         margin: 0;
+        font-size: 14px;
+        line-height: 19px;
+    }
+    .footer_link {
+        line-height: 16px;
     }
     .footer_privicy {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        @include flex-row;
         & li + li {
             margin-inline-start: 1rem;
         }
     }
     .footer_privicy li:nth-child(2) {
-        border-inline-start: 1px solid grey;
-        border-inline-end: 1px solid grey;
         padding-inline-start: 1rem;
         padding-inline-end: 1rem;
         margin-inline-end: 0;
